--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,14 @@ li:active {
 .hidden {
   display: none;
 }
+
+.closeModal {
+  margin: 0;
+  position: relative;
+  top: 80%;
+  left: 28%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  font-family: helvetica;
+  font-weight: bold;
+}
